@@ -8,4 +8,3 @@ DeleteInresponseUsers.sql
 DisableAllMonitors.sql
 ReplaceReportSubfolder.sql
 ReplacePrinters.sql
-RestoreInresponseServices.sql
