@@ -1,3 +1,5 @@
+2025-02-28
+-- Fixed error: Webservice could not be started, because Conversation handles were not created when restoring saved Webservice definitions.
 2025-02-25
 -- Services of type "2" (Web service) will now also be deleted from the table inresponse.services
 2025-02-03
